--- a/index.html
+++ b/index.html
@@ -3,7 +3,106 @@
 <head>
     <title>Campus Life</title>
 </head>
+
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <h1 id = "banner">Student Life</h1>
+        <p>Explore the vibrant and diverse community that shapes our university experience</p>
+        <img alt="need to replace this image"/>
+    </header>
+
+    <!-- NAVIGATION -->
+    <nav id="navigation">
+        <ul?>
+            <li><a href="#organizations">Organizations</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#news">News</a></li>
+        </ul>
+
+    </nav>
+
+    <!-- MAIN CONTENT -->
+
+    <!-- ORGANIZATIONS -->
+    <section id="organizations">
+        <h2>Organizations</h2>
+        <p> placeholder content</p>
+        <section class="org">
+            <img src="images/bcc.avif" width=300px>
+            <h3>Brown Consulting Club</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, nobis.</p>
+        </section>
+        <section class="org">
+            <img src="images/wics.png" width=300px>
+            <h3>Women in Computer Science</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, nobis.</p>
+        </section>
+        <section class="org">
+            <img src="images/bca.avif" width=300px>
+            <h3>Brown Concert Agency</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, nobis.</p>
+        </section>
+    </section>
+
+    <!-- EVENTS -->
+    <section id="events">
+        <h2>Upcoming Events</h2>
+        <section class="event">
+            <a href = "https://www.realtimesportsbar.com/funny-party-ideas-for-friends"><img src="images/party.jpg" width=300px></a>
+            <h3>Super Fun Party</h3>
+            <p>Date: Today</p>
+            <p>Time: Now</p>
+            <p>Location: Here</p>
+        </section>
+
+        <section class="event">
+            <a href = "https://www.realtimesportsbar.com/funny-party-ideas-for-friends"><img src="images/party.jpg" width=300px></a>
+            <h3>Super Fun Party</h3>
+            <p>Date</p>
+            <p>Time</p>
+            <p>Location</p>
+        </section>
+
+        <section class="event">
+            <a href = "https://www.realtimesportsbar.com/funny-party-ideas-for-friends"><img src="images/party.jpg" width=300px></a>
+            <h3>Super Fun Party</h3>
+            <p>Date</p>
+            <p>Time</p>
+            <p>Location</p>
+        </section>
+
+    <!-- NEWS -->
+    <section id="news">
+        <h2>Campus News</h2>
+        <section id="headline-article">
+            <img src="images/bdh.jpg" width=300px>
+            <a href = "Brown police department sued over exemption from RI public records law"><h3>Brown police department sued over exemption from RI public records law</h3> </a>
+            <p>A University spokesperson said Brown was prepared to “mount a strong effort” defending its exemption from the APRA.</p>
+        </section>
+
+        <section class="article">
+            <a href = "Brown police department sued over exemption from RI public records law"><h4>Article 1</h4></a>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere rem autem numquam fugit cum possimus!</p>
+        </section>
+
+        <section class="article">
+            <a href = "Brown police department sued over exemption from RI public records law"><h4>Article 2</h4></a>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere rem autem numquam fugit cum possimus!</p>
+        </section>
+
+        <section class="article">
+            <a href = "Brown police department sued over exemption from RI public records law"><h4>Article 3</h4></a>a
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere rem autem numquam fugit cum possimus!</p>
+        </section>
+
+        <section class="article">
+            <a href = "Brown police department sued over exemption from RI public records law"><h4>Article 4</h4></a>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere rem autem numquam fugit cum possimus!</p>
+        </section>
+    </section>
+
+
+
 </body>
 </html>
