--- a/index.html
+++ b/index.html
@@ -2,52 +2,52 @@
 <html>
 <head>
     <title>Campus Life</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- HEADER -->
+    <!----------- HEADER ----------->
     <header>
-        <h1 id = "banner">Student Life</h1>
-        <p>Explore the vibrant and diverse community that shapes our university experience</p>
-        <img alt="need to replace this image"/>
+        <h1 id="banner">Brown University Student Life</h1>
+        <p id="banner-desc">Explore the vibrant and diverse community that shapes our university experience</p>
+        <!-- <img id="brown-img" src="images/brown.png" width = 1000px> -->
     </header>
 
-    <!-- NAVIGATION -->
+    <!------------ NAVIGATION ---------->
     <nav id="navigation">
-        <ul?>
-            <li><a href="#organizations">Organizations</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#news">News</a></li>
-        </ul>
-
+        <a href="#organizations"><p class="nav">Organizations</p></a>
+        <a href="#events"><p class="nav">Events</p></a>
+        <a href="#news"><p class="nav">News</p></a>
     </nav>
 
-    <!-- MAIN CONTENT -->
+    <!----------MAIN CONTENT ------------>
 
     <!-- ORGANIZATIONS -->
+
+    <h2>Organizations</h2>
+    <p> placeholder content</p>
     <section id="organizations">
-        <h2>Organizations</h2>
-        <p> placeholder content</p>
         <section class="org">
-            <img src="images/bcc.avif" width=300px>
+            <img src="images/bcc.avif" width=300px height=300px>
             <h3>Brown Consulting Club</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, nobis.</p>
         </section>
         <section class="org">
-            <img src="images/wics.png" width=300px>
+            <img src="images/wics.png" width=300px height=300px>
             <h3>Women in Computer Science</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, nobis.</p>
         </section>
         <section class="org">
-            <img src="images/bca.avif" width=300px>
+            <img src="images/bca.avif" width=300px height=300px>
             <h3>Brown Concert Agency</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, nobis.</p>
         </section>
     </section>
 
     <!-- EVENTS -->
+
+    <h2>Upcoming Events</h2>
     <section id="events">
-        <h2>Upcoming Events</h2>
         <section class="event">
             <a href = "https://www.realtimesportsbar.com/funny-party-ideas-for-friends"><img src="images/party.jpg" width=300px></a>
             <h3>Super Fun Party</h3>
@@ -71,16 +71,20 @@
             <p>Time</p>
             <p>Location</p>
         </section>
+    </section>
 
     <!-- NEWS -->
     <section id="news">
         <h2>Campus News</h2>
+
+        <!-- Headline Article -->
         <section id="headline-article">
             <img src="images/bdh.jpg" width=300px>
             <a href = "Brown police department sued over exemption from RI public records law"><h3>Brown police department sued over exemption from RI public records law</h3> </a>
             <p>A University spokesperson said Brown was prepared to “mount a strong effort” defending its exemption from the APRA.</p>
         </section>
 
+        <!-- Other 4 Articles -->
         <section class="article">
             <a href = "Brown police department sued over exemption from RI public records law"><h4>Article 1</h4></a>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere rem autem numquam fugit cum possimus!</p>
@@ -92,7 +96,7 @@
         </section>
 
         <section class="article">
-            <a href = "Brown police department sued over exemption from RI public records law"><h4>Article 3</h4></a>a
+            <a href = "Brown police department sued over exemption from RI public records law"><h4>Article 3</h4></a>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere rem autem numquam fugit cum possimus!</p>
         </section>
 
